# weatherx

./: README.md  pyproject.toml
tests/: test_cli.py
weatherx/: cli.py
